manifests/web-2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-2-deployment
spec:
  selector:
    matchLabels:
      app: web-2
  replicas: 1
  template:
    metadata:
      labels:
        app: web-2
    spec:
      containers:
      - name: web-2-app
        image: kmdr7/web-landing-2:latest
        ports:
        - containerPort: 80
        resources:
          requests:
              cpu: 100m
              memory: 128Mi
          limits:
            cpu: 100m
            memory: 128Mi
