manifests/web-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-2-service
spec:
  type: ClusterIP
  selector:
    app: web-2
  ports:
    - name: web-2
      protocol: TCP
      port: 80
      targetPort: 80
