manifests/web-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-2-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: web-2.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-2-service
            port:
              number: 80
